# vroads

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh
Docs/: 0_PathsToVertex.md  1_Chuncking.md
resources/: floor.glb  queryArea.m4  queryBBOX.m4
resources/guy/: guy.glb
resources/shaders/: main.fs  mainvs.glsl  minimapfs.glsl  minimapvs.glsl
src/common/: 0_GlobalIncludes.h  1_CringeMiniDataStructs.c  1_CringeMiniDataStructs.h
src/glad/: glad.c  glad.h
src/main/: 0_GlobalIncludes.c  0_GlobalIncludes.h  fileOperations.c  fileOperations.h  game.c  game.h  main.c  main.h  overpassQueries.c  overpassQueries.h
src/minimap/: minimap.c  minimap.h
src/test/: test0.c  testMiniDataStructs.c
